Procedural Duplication (Dupliverts etc) master object's children are being rendered. #43019

Closed
opened 2014-12-26 07:31:38 +01:00 by Adam Preisler · 9 comments

System Information
Windows 8.1

Blender Version
2.72b

Short description of error
When using Object duplication, the duplication master object (child of Base Mesh) itself is not being rendered. Which is correct. But it's children are being rendered. I often parent objects onto the Master object and it is tricky to get rid of them in the final render.

Check this .blend file: http://www.pasteall.org/blend/33540

On the left, typical duplivert situation. Red cube being the Base Mesh (not visible in rendered view - it is offset a bit for clear view) and Green cube being the Master object. Take notice that the master Green cube in the middle is not being rendered, just as it should be.

And on the right, there's a small Blue cube which is parented to the Green Cube. The master Green cube on the right is still not being rendered, but it's child - the blue Cube is, which is unwanted behavior and in my opinion, a bug.

Exact steps for others to reproduce the error
Add Cube
Add Icosphere
Select both and make Cube active
Press Ctrl+P -> choose Object
Select Cube and turn dupliverts on in object tab in properties window
Now check that everything is working properly -> press Shift+Z and rotate the view so you see the middle of the cluster.
You should see that the Icosphere in the middle of the base mesh - the Cube - is not being rendered.

Now onto the bug:

Add Cone
Select both Icosphere and Cone
Make Icosphere the active object in the selection
Press Ctrl+P -> choose Object

Now press Shift+Z for rendered view again and notice the Cone which is being rendered in the middle of the Cube while being the child of the master object and thus should not be visible.

**System Information** Windows 8.1 **Blender Version** 2.72b **Short description of error** When using Object duplication, the duplication master object (child of Base Mesh) itself is not being rendered. Which is correct. But it's children are being rendered. I often parent objects onto the Master object and it is tricky to get rid of them in the final render. Check this .blend file: http://www.pasteall.org/blend/33540 On the left, typical duplivert situation. Red cube being the Base Mesh (not visible in rendered view - it is offset a bit for clear view) and Green cube being the Master object. Take notice that the master Green cube in the middle is not being rendered, just as it should be. And on the right, there's a small Blue cube which is parented to the Green Cube. The master Green cube on the right is still not being rendered, but it's child - the blue Cube is, which is unwanted behavior and in my opinion, a bug. **Exact steps for others to reproduce the error** Add Cube Add Icosphere Select both and make Cube active Press Ctrl+P -> choose Object Select Cube and turn dupliverts on in object tab in properties window Now check that everything is working properly -> press Shift+Z and rotate the view so you see the middle of the cluster. You should see that the Icosphere in the middle of the base mesh - the Cube - is not being rendered. Now onto the bug: Add Cone Select both Icosphere and Cone Make Icosphere the active object in the selection Press Ctrl+P -> choose Object Now press Shift+Z for rendered view again and notice the Cone which is being rendered in the middle of the Cube while being the child of the master object and thus should not be visible.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AdamPreisler

Added subscriber: @AdamPreisler

This issue was referenced by 836ea4b70f

This issue was referenced by 836ea4b70f8811144e4ccb0a15003c7ab7ef244e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 836ea4b70f.

Closed by commit 836ea4b70f.

This issue was referenced by blender/cycles@7d0f0aa1cb

This issue was referenced by blender/cycles@7d0f0aa1cb0ca5ce78e17b036e82ca5c21f9f682
Author

Good job, I am glad it is fixed!

Good job, I am glad it is fixed!

Added subscriber: @kanil

Added subscriber: @kanil

I'm a beginner In Blender 2.72b
I cannot find Object panel --> Duplication --> verts
trying to practice the example DupliVerts as an Arranging Tool
in Blender Doc 2.6 manual page 326
Hope you could show me how to find Verts in 2.72b
Thanks

I'm a beginner In Blender 2.72b I cannot find Object panel --> Duplication --> verts trying to practice the example DupliVerts as an Arranging Tool in Blender Doc 2.6 manual page 326 Hope you could show me how to find Verts in 2.72b Thanks
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43019
No description provided.