Fix T43019: Child of objectes used by duplis are visible in Cycles

Seems the parent check didn't go deep enough and only checked single parent.
Now it checks the chain of parents which seems to be correct but requires
much more intense testing.